--- a/Recepices/Index.html
+++ b/Recepices/Index.html
@@ -6,10 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./Style.css" />
   </head>
   <body>
@@ -48,15 +45,60 @@
           </div>
           <div class="cards">
             <button class="card" onclick="document.location='Brownie.html'" style="border: none;">
-              <img src="./Images/Brownie.png" alt="" style="width: 15%;border-radius: 25%;"/>
+              <img src="./Images/Brownie.png" alt="" style="width: 30%;border-radius: 25%;"/>
               <div class="card-info">
-                <h1>Brownies</h1>
+                <h3><b>Brownies</b></h3>
               </div>
             </button>
             <button class="card" onclick="document.location='Cupcake.html'" style="border: none;">
-              <img src="./Images/Cupcake.png" alt="" style="width: 15%;border-radius: 25%;"/>
+              <img src="./Images/Cupcake.png" alt="" style="width: 30%;border-radius: 25%;"/>
               <div class="card-info">
-                <h1>Cupcakes</h1>
+                <h3><b>Cupcakes</b></h3>
+              </div>
+            </button>
+            <button class="card" style="border: none;">
+              <div class="card-info">
+                <h3><b>Coming Soon!!!</b></h3>
+              </div>
+            </button>
+            <button class="card" style="border: none;">
+              <div class="card-info">
+                <h3><b>Coming Soon!!!</b></h3>
+              </div>
+            </button>
+            <button class="card" style="border: none;">
+              <div class="card-info">
+                <h3><b>Coming Soon!!!</b></h3>
+              </div>
+            </button>
+            <button class="card" style="border: none;">
+              <div class="card-info">
+                <h3><b>Coming Soon!!!</b></h3>
+              </div>
+            </button>
+            <button class="card" style="border: none;">
+              <div class="card-info">
+                <h3><b>Coming Soon!!!</b></h3>
+              </div>
+            </button>
+            <button class="card" style="border: none;">
+              <div class="card-info">
+                <h3><b>Coming Soon!!!</b></h3>
+              </div>
+            </button>
+            <button class="card" style="border: none;">
+              <div class="card-info">
+                <h3><b>Coming Soon!!!</b></h3>
+              </div>
+            </button>
+            <button class="card" style="border: none;">
+              <div class="card-info">
+                <h3><b>Coming Soon!!!</b></h3>
+              </div>
+            </button>
+            <button class="card" style="border: none;">
+              <div class="card-info">
+                <h3><b>Coming Soon!!!</b></h3>
               </div>
             </button>
           </div>
